improvement: Use cli module from bloop-core as it has more utilities